--- a/server/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/server/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -47,18 +47,18 @@
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" routerLink="admin/dashboard-metrics" routerLinkActive="active" (click)="collapseNavbar()">
-                            <fa-icon [icon]="'tachometer-alt'" [fixedWidth]="true"></fa-icon>
-                            <span>Metrics</span>
-                        </a>
-                    </li>
-                    <!--<li>
-                        <a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active" (click)="collapseNavbar()">
-                            <fa-icon [icon]="'heart'" [fixedWidth]="true"></fa-icon>
-                            <span>Health</span>
+                        <a class="dropdown-item" routerLink="admin/user-statistic" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'bell'" [fixedWidth]="true"></fa-icon>
+                            <span>User Statistic</span>
                         </a>
                     </li>
                     <li>
+                        <a class="dropdown-item" routerLink="admin/transaction-history" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'heart'" [fixedWidth]="true"></fa-icon>
+                            <span>Transaction History</span>
+                        </a>
+                    </li>
+                    <!--<li>
                         <a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active" (click)="collapseNavbar()">
                             <fa-icon [icon]="'list'" [fixedWidth]="true"></fa-icon>
                             <span>Configuration</span>
@@ -76,12 +76,12 @@
                             <span>Logs</span>
                         </a>
                     </li>-->
-                    <li *ngIf="swaggerEnabled">
+                    <!-- <li *ngIf="swaggerEnabled">
                         <a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active" (click)="collapseNavbar()">
                             <fa-icon [icon]="'book'" [fixedWidth]="true"></fa-icon>
                             <span>API</span>
                         </a>
-                    </li>
+                    </li> -->
                     <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
                     <!-- <li *ngIf="!inProduction">
                         <a class="dropdown-item" href='./h2-console' target="_tab" (click)="collapseNavbar()">
