--- a/android/app/src/main/res/layout/activity_content.xml
+++ b/android/app/src/main/res/layout/activity_content.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text= "-"
+        android:onClick="showPopup"/>
+
     <android.support.design.widget.TabLayout
         style="@style/AppTabLayout"
         app:tabTextAppearance="@style/AppTabTextAppearance"
