update theme light
update them light

--- a/android/app/src/main/res/layout/activity_getkeyreset.xml
+++ b/android/app/src/main/res/layout/activity_getkeyreset.xml
@@ -2,7 +2,7 @@
 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary">
+    android:background="@color/white">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Please enter your email address !"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
