--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@color/white">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -11,7 +12,7 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/logo"
+        <ImageView android:src="@drawable/ic_logo"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:layout_marginBottom="20dp"
@@ -26,7 +27,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="Fist Name" />
+                android:hint="Fist Name"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
         <!-- Last Name Label -->
         <android.support.design.widget.TextInputLayout
@@ -38,7 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:hint="Last name" />
+                android:hint="Last name"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
         <!--gender-->
 
@@ -87,7 +90,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="Email"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
         //LoginName
         <android.support.design.widget.TextInputLayout
@@ -99,7 +103,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="Name Login" />
+                android:hint="Name Login"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
         <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
@@ -111,7 +116,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="Password"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
         <!-- Password Re-enter Label -->
         <android.support.design.widget.TextInputLayout
@@ -123,7 +129,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Re-enter Password"/>
+                android:hint="Re-enter Password"
+                android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Signup Button -->
