--- a/android/app/src/main/res/layout/activity_resetpassword.xml
+++ b/android/app/src/main/res/layout/activity_resetpassword.xml
@@ -1,68 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary">
-    <LinearLayout
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
+    android:paddingTop="40dp"
+    android:background="@color/white"
+    android:theme="@style/AppTheme.Dark">
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="40dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp">
 
-        <android.support.design.widget.TextInputLayout
+        <EditText
+            android:id="@+id/edKey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/edKey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Your Key"
-                android:inputType="text" />
-        </android.support.design.widget.TextInputLayout>
+            android:hint="Your Key"
+            android:inputType="text"
+            android:textColor="@color/black" />
+    </android.support.design.widget.TextInputLayout>
 
 
-        <android.support.design.widget.TextInputLayout
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp">
+
+        <EditText
+            android:id="@+id/edNewPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:hint="New Password"
+            android:inputType="textPassword"
+            android:textColor="@color/black" />
+    </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/edNewPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="New Password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp">
 
-        <android.support.design.widget.TextInputLayout
+        <EditText
+            android:id="@+id/edConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:hint="Confirm Password"
+            android:inputType="textPassword"
+            android:textColor="@color/black" />
+    </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/edConfirmPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Confirm Password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_reset"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="24dp"
-            android:padding="12dp"
-            android:text="Confirm" />
-
-    </LinearLayout>
-</ScrollView>
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btn_reset"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="24dp"
+        android:padding="12dp"
+        android:text="Confirm" />
+</LinearLayout>
