--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,25 +5,31 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/monsoon</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="colorControlNormal">@color/iron</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">@color/monsoon</item>
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/iron</item>
         <item name="colorButtonNormal">@color/primary_darker</item>
+        <item name="android:textAppearance">@style/MyText</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="editTextColor">@color/black</item>
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/monsoon</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="colorControlNormal">@color/iron</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">@color/monsoon</item>
         <item name="colorControlHighlight">@color/white</item>
-        <item name="android:textColorHint">@color/iron</item>
+        <item name="android:textColorHint">@color/jumbo</item>
         <item name="colorButtonNormal">@color/primary_darker</item>
+        <item name="android:textAppearance">@style/MyText</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:editTextColor">@color/black</item>
     </style>
 
     <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
@@ -50,7 +56,7 @@
     <!-- for text -->
     <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="textAllCaps">false</item>
     </style>
 
@@ -59,5 +65,8 @@
         <item name="android:textStyle">bold</item>   
     </style>
 
+    <style name="MyText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 </resources>
