--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -91,6 +91,31 @@
                 //row2
 
                 <TableRow
+                    android:id="@+id/tableRowGender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:padding="5dip">
+
+                    <TextView
+                        android:layout_weight="1"
+                        android:background="#fff"
+                        android:gravity="left"
+                        android:padding="5dip"
+                        android:text="Gender"
+                        android:textColor="#000000" />
+
+                    <TextView
+                        android:id="@+id/myGender"
+                        android:layout_weight="1"
+                        android:background="#fff"
+                        android:gravity="left"
+                        android:padding="5dip"
+                        android:text=" "
+                        android:textColor="#8470ff" />
+                </TableRow>
+
+                <TableRow
                     android:id="@+id/tableRow2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
