--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -65,6 +65,11 @@
         <item name="android:textStyle">bold</item>   
     </style>
 
+    <style name="PopupMenu">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:itemBackground">@android:color/holo_red_light</item>
+    </style>
+
     <style name="MyText" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/black</item>
     </style>
