paid user permission

--- a/android/app/src/main/res/layout/activity_detail_user.xml
+++ b/android/app/src/main/res/layout/activity_detail_user.xml
@@ -456,6 +456,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_addFriend"
-            android:text="Kết bạn" />
+            android:text="Add Friend" />
     </RelativeLayout>
 </RelativeLayout>
