--- a/android/app/src/main/res/layout/friend_detail_user.xml
+++ b/android/app/src/main/res/layout/friend_detail_user.xml
@@ -456,7 +456,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_delFriend"
-            android:text="Xóa bạn" />
+            android:text="Delete Friend" />
     </RelativeLayout>
 
 </RelativeLayout>
