--- a/android/app/src/main/res/drawable/in_message_bg.xml
+++ b/android/app/src/main/res/drawable/in_message_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- View background color -->
-    <solid android:color="#FF6E00"></solid>
+    <solid android:color="#ffeeeeee"></solid>
     <!-- The radius makes the corners rounded -->
     <corners android:radius="20dp"></corners>
 </shape>
