--- a/android/app/src/main/res/layout/fragment_friends.xml
+++ b/android/app/src/main/res/layout/fragment_friends.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         app:tabMode="fixed"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/white"
-        android:background="@color/red"
+        app:tabIndicatorColor="#ffeeeeee"
+        android:background="@color/white"
         app:tabBackground="@drawable/tab_selected_background"
         />
 
@@ -22,6 +22,6 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray" />
+        android:background="#ffeeeeee" />
 
 </LinearLayout>
