--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,30 +3,31 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorAccent</item>
         <item name="colorAccent">@color/monsoon</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="colorControlNormal">@color/iron</item>
         <item name="colorControlActivated">@color/monsoon</item>
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/iron</item>
-        <item name="colorButtonNormal">@color/primary_darker</item>
+        <item name="colorButtonNormal">#ffeeeeee</item>
         <item name="android:textAppearance">@style/MyText</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="editTextColor">@color/black</item>
+        <item name="android:homeAsUpIndicator">@drawable/back_arrow</item>
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorPrimaryDark">@color/colorAccent</item>
         <item name="colorAccent">@color/monsoon</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="colorControlNormal">@color/iron</item>
         <item name="colorControlActivated">@color/monsoon</item>
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/jumbo</item>
-        <item name="colorButtonNormal">@color/primary_darker</item>
+        <item name="colorButtonNormal">#ffeeeeee</item>
         <item name="android:textAppearance">@style/MyText</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:editTextColor">@color/black</item>
@@ -55,7 +56,7 @@
 
     <!-- for text -->
     <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="textAllCaps">false</item>
     </style>
