--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/img3" />
+                android:src="@drawable/avata_demo_1" />
         </RelativeLayout>
 
         <LinearLayout
@@ -71,7 +71,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text="Quang"
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
                 //row2
@@ -97,7 +97,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -122,7 +122,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text="20"
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
                 //row3
@@ -148,7 +148,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text="170"
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
                 //row4
@@ -174,7 +174,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text="Hà Nội"
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -269,7 +269,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="-- "
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -294,7 +294,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="-- "
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -319,7 +319,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -364,7 +364,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -389,7 +389,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
 
@@ -415,7 +415,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text=" "
+                        android:text="--"
                         android:textColor="#8470ff" />
                 </TableRow>
             </TableLayout>
