--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorAccent</item>
-        <item name="colorPrimaryDark">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorCustom</item>
         <item name="colorAccent">@color/monsoon</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="colorControlNormal">@color/iron</item>
@@ -20,7 +20,7 @@
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorCustom</item>
         <item name="colorAccent">@color/monsoon</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="colorControlNormal">@color/iron</item>
