--- a/android/app/src/main/res/layout/list_request_friend.xml
+++ b/android/app/src/main/res/layout/list_request_friend.xml
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/reqAvatar"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="35dp"
+        android:layout_toRightOf="@+id/btn_AcceptReq"
+        android:layout_marginLeft="20dp"
         android:text="Delete" />
 </RelativeLayout>
